# redditpersona

./: .env.example  .gitignore  LICENSE  README.md  config.py  config.yaml  pyproject.toml  requirements.txt  run.py
anonymization/: anonymizer.py
collection/: collect_subreddits.py  verify_subreddits.py
evaluation/: __init__.py  evaluator.py  generator.py  metrics.py
grouping/: __init__.py  _consolidate.py  analyze.py  run_all.py  strategy_graph.py  strategy_hybrid.py  strategy_interaction.py  strategy_semantic.py  strategy_subreddit.py
profiles/: build_profiles.py
training/: __init__.py  dataset.py  runner.py  trainer.py  training_test.py
utils/: __init__.py  reddit_client.py  storage.py
